--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   debounce_throttle: ^2.0.0
   calendar_date_picker2: ^1.0.2
   dropdown_button2: ^2.3.9
-
+  google_nav_bar: ^5.0.6
+  line_icons: ^2.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
