--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,13 +48,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_auth: ^4.20.0
   flutter_secure_storage: ^9.2.2
-  http_client: ^1.5.3
-  cookie_jar: ^4.0.8
-  dio: ^5.4.3+1
-  dio_cookie_manager: ^3.1.1
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -80,6 +75,7 @@ flutter:
   assets:
     - lib/assets/icons/
     - lib/assets/logo/
+    - lib/assets/background/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
