--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_secure_storage: ^9.2.2
+  syncfusion_flutter_datepicker: ^26.1.35
   
 dev_dependencies:
   flutter_test:
