--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,25 +32,21 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
   intl: ^0.19.0
-  google_places_autocomplete_text_field: ^0.1.3
   debounce_throttle: ^2.0.0
-  calendar_date_picker2: ^1.0.2
-  dropdown_button2: ^2.3.9
   google_nav_bar: ^5.0.6
   fluttericon: ^2.0.0
   line_icons: ^2.0.3
   provider: ^6.1.2
-  money_formatter: ^0.0.6
   flutter_svg: ^2.0.0
   animated_svg: ^2.0.0
   flutter_login: ^5.0.0
-  animate_do: ^3.1.2
+  modal_bottom_sheet: ^3.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_secure_storage: ^9.2.2
   syncfusion_flutter_datepicker: ^26.1.35
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
