--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^26.1.35
   web_socket_channel: ^2.2.0
   rxdart: ^0.28.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -73,9 +74,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/icons/
-    - lib/assets/logo/
-    - lib/assets/background/
+    - assets/icons/
+    - assets/logo/
+    - assets/background/
+    - assets/lottie/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
