--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,15 @@ dependencies:
   web_socket_channel: ^2.2.0
   rxdart: ^0.28.0
   lottie: ^3.1.2
+  hive: ^2.2.3
+  path_provider: ^2.1.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.4.11
+  hive_generator: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
