--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.1.3
   hive_flutter: ^1.1.0
+  awesome_dialog: ^3.2.1
 
 dev_dependencies:
   flutter_test:
