--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   lottie: ^3.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  smooth_page_indicator: ^1.1.0
   
 dev_dependencies:
   flutter_test:
