--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,12 @@ dependencies:
   flutter_login: ^5.0.0
   modal_bottom_sheet: ^3.0.0
   google_fonts: ^6.2.1
+  animated_text_kit: ^4.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_secure_storage: ^9.2.2
   syncfusion_flutter_datepicker: ^26.1.35
-  web_socket_channel: ^3.0.0
   rxdart: ^0.28.0
   lottie: ^3.1.2
   hive: ^2.2.3
