--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   google_fonts: ^6.2.1
   animated_text_kit: ^4.2.2
+  grouped_list: ^6.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
