--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_fonts: ^6.2.1
   animated_text_kit: ^4.2.2
   grouped_list: ^6.0.0
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
