--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
     - assets/logo/
     - assets/background/
     - assets/lottie/
+    - assets/config.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
